manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ets-frontend
  namespace: kube-ops
  labels:
    app: ets-frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: ets-frontend
