manifests/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ets-frontend
  namespace: kube-ops
  labels:
    app: ets-frontend
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: ets.gd
    http:
      paths:
      - path: /
        backend:
          serviceName: ets-frontend
          servicePort: 80
      - path: /ExternalFiles
        backend:
          serviceName: ets-backend
          servicePort: 5000
